[package]
name = "zk-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_escrow"

[features]
custom-heap = []
default = ["custom-heap", "idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
light-compressed-token = {version = "1.2.0", features = ["cpi"]}
light-compressed-account = {version = "0.2.0", features = ["anchor"]}
light-sdk = "0.12.0"